--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,6 +3,15 @@ security:
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     
+    # --- NOUVEAU BLOC: HIERARCHIE DE RÔLES ---
+    role_hierarchy:
+        # L'Admin hérite de tout le monde
+        ROLE_ADMIN: [ROLE_GESTIONNAIRE] 
+        # Le Gestionnaire hérite du Professeur
+        ROLE_GESTIONNAIRE: [ROLE_PROF] 
+        # Le Professeur pourrait hériter de l'Élève, mais ce n'est généralement pas nécessaire
+        ROLE_PROF: [ROLE_ELEVE]
+        
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # --- C'EST LA CORRECTION PRINCIPALE ---
@@ -39,8 +48,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # Décommentez et adaptez ces lignes pour protéger vos sections
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        # Protégez le /planning/global via le contrôleur (annotation)
+        # Mais ajoutons une ligne pour le niveau Admin, c'est plus sûr
+        - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/professeur/dashboard, roles: ROLE_PROF }
         # - { path: ^/eleve/dashboard, roles: ROLE_ELEVE }
         # - { path: ^/instrument, roles: ROLE_GESTIONNAIRE }
